# picolibc

./: CMakeLists.txt
chino/: CMakeLists.txt  atomic_wait.cpp  file.cpp  iob.cpp  termios.cpp  time.cpp
cmake/: picolibc.cmake
compiler_rt/: CMakeLists.txt  msvc.cpp
newlib/libc/ctype/: isblank.c
newlib/libc/include/: _ansi.h  math.h  time.h
newlib/libc/include/arpa/: inet.h
newlib/libc/include/machine/: endian.h
newlib/libc/include/sys/: _types.h  cdefs.h  features.h  types.h
newlib/libc/locale/: locale.c
newlib/libc/machine/aarch64/: asmdefs.h  rawmemchr.S  setjmp.S
newlib/libc/machine/aarch64/sys/: fenv.h
newlib/libc/machine/arm/machine/: fenv-fp.h
newlib/libc/machine/mips/sys/: fenv.h
newlib/libc/machine/powerpc/sys/: fenv.h
newlib/libc/misc/: ffs.c
newlib/libc/picolib/: CMakeLists.txt
newlib/libc/stdlib/: nano-mallocr.c
newlib/libc/string/: ffsl.c  ffsll.c
newlib/libc/tinystdio/: atof_ryu.c  stdio.h
newlib/libm/common/: copysignl.c
scripts/: duplicate-names
